KSENROLL-10902 UI Issue - CO - Term Text is Too Small - Removing the font size declaration from ks-topGroup-courseOffering-termName so that it'll inherit from the body class
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@60345 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -717,7 +717,6 @@ cursor:auto;
 .ks-topGroup-courseOffering-termName {
   padding-top: 10px;
   padding-left: 8px;
-  font-size: 0.875em;
 }
 
 .ks-topGroup-courseOffering-termName span {
@@ -1293,6 +1292,10 @@ table.dataTable tr.uif-newCollectionItem td.sorting_1 {
 //home page and dynamic breadcrumb end
 
 @import "pagination";
+
+.ks-enrollment-home > h3 {
+    padding
+}
 
 /*
   Glyphicons Halflings Web font styles
